time table experiment 3
Updated the HTML structure and styling of the college timetable.

--- a/tt.html
+++ b/tt.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>College Timetable</title>
 </head>
 <body>
-    <table border="2" align="center" cellspacing="0" cellpadding="8" >
-        <td colspan="8" align="center">College Timetable - CSE Department</td>
+    <table border="1" align="center" cellpadding="10" cellspacing="0"  >
+       <caption><strong> College Timetable - CSE Department</strong></caption>
      <tr>
 <th> Day / Time</th>
 <th> 9:00 - 10:00</th>
@@ -34,14 +34,13 @@
     <td colspan="2">Electronics Lab</td>
     <td>Library</td>
 </tr>
-<tr cellpadding="5">
+<tr>
     <th>Wednesday</th>
     <td>Mathematics</td>
     <td>English</td>
     <td>Break</td>
     <td>Computer Networks</td>
-    <td colspan="2" cellspacing="10">
-        <table border="2" cellspacing="0" cellpadding="6">
+    <td colspan="2"><table border="1" align="center" cellpadding="8" cellspacing="0" colspan="2" >
             <tr>
                 <th colspan="2">Lab Details</th>
             </tr>
@@ -75,4 +74,5 @@
 </tr>
 </table>
 </body>
+
 </html>
